--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
 
         // --- ★ 링크 공유 기능 (단축 URL 적용) ---
         async function shareLink() {
-            const shareUrl = "https://bit.ly/yearbill"; // 요청하신 단축 URL
+            const shareUrl = "https://joo.is/yearbill"; // 요청하신 단축 URL
 
             const shareData = {
                 title: '연말 기억 영수증',
