--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
                 
                 <!-- 영수증 헤더 -->
                 <div class="text-center mb-1 pb-0 relative">
-                    <!-- whitespace-nowrap 추가로 줄바꿈 방지 -->
-                    <div class="text-xl sm:text-2xl font-black tracking-widest mb-2 text-gray-900 whitespace-nowrap">[ <span class="current-year-text"></span>년 결산 영수증 ]</div>
+                    <!-- 줄바꿈 방지와 중앙 정렬 -->
+                    <div class="flex justify-center w-full text-xl sm:text-2xl font-black tracking-widest mb-2 text-gray-900 whitespace-nowrap">[ <span class="current-year-text"></span>년 결산 영수증 ]</div>
                     <div class="text-[11px] font-bold text-gray-500 mb-6">소중한 1년이 정상적으로 기록되었습니다.</div>
                     
                     <div class="flex justify-between text-xs font-bold px-1 text-gray-600 mb-1 w-full">
